@@ -1,5 +1,9 @@
 2009-01-12  Petr Machata  <pmachata@redhat.com>
 
+	* dwarflint.c: Check padding between sections in .debug_aranges.
+
+2009-01-12  Petr Machata  <pmachata@redhat.com>
+
 	* dwarflint.c: For DIE references, remember both referrer and
 	referree.  Add a new data structure ref_record to support that.
 	Add new message category, mc_die_rel_ref.  Rename other DIE
